# pache-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: codeql.yml
ast/: ast.cpp  ast.h  ast_rtti.txt  class.cpp  class.h  compunit.h  expression.h  literal.cpp  literal.h  statement.h  type.cpp  type.h
docs/: README.md  TODO.md  comment.md  deadline.md  keyword.md
docs/keyword/: delete.md
docs/language/: README.md  array.md  basic_concepts.md  class.md  classes.md  comment.md  declarations.md  delete.md  enum.md  exceptions.md  explicit_cast.md  expressions.md  function.md  functions.md  identifiers.md  implicit_conversion.md  initialization.md  integer_literal.md  language.md  new.md  object.md  operator_assignment.md  operators.md  reference.md  scope.md  statements.md  type.md  types.md  value_category.md
docs/release/: complier.md  lexical_conventions.md  statement_file.md  type.md
src/: CMakeLists.txt  driver.cpp  driver.h  lexer.l  lexer.lpp  main.cpp  parser.y  reference_ptr.h
src/IRbuild/: CMakeLists.txt  build.cpp  build.h  class.cpp  class.h  class_type.cpp  class_type.h  comp_unit.cpp  comp_unit.h  expression.cpp  expression.h  function.cpp  function.h  function_type.cpp  function_type.h  literal.cpp  literal.h  operator.cpp  operator.h  scope.cpp  scope.h  statement.cpp  statement.h  type.cpp  type.h  variable.cpp  variable.h
src/ast/: CMakeLists.txt  ast.cpp  ast.h  ast_rtti.txt  class.cpp  class.h  compunit.cpp  compunit.h  expression.cpp  expression.h  function.cpp  function.h  import.h  literal.cpp  literal.h  multi_array_type.cpp  multi_array_type.h  scope.cpp  scope.h  statement.cpp  statement.h  type.cpp  type.h
src/flex/: flex.h
